--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
-.App {
-  text-align: center;
+body, html, #root, .app {
+  margin: 0;
+  padding: 0;
+  font: normal normal normal 32px/38px Exo 2.0;
+  background-color: #f9f9f9;
 }
-
-
