--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
-body, html, #root, .app {
+body,
+html,
+#root,
+.app {
   margin: 0;
   padding: 0;
-  font: normal normal normal 32px/38px Exo 2.0;
+  font: normal normal normal 32px/38px Exo 2;
   background-color: #f9f9f9;
+}
+
+.main {
+  display: flex;
 }
