--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,16 +2,19 @@
   text-align: center;
   padding: 20px;
   background-color: #f4f4f4;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .logo {
   top: 256px;
-left: 40px;
-width: 517px;
-height: 145px;
-/* UI Properties */
-/* background: transparent url('../Assets/EZ\ Works\ Blue@2x.png') 0% 0% no-repeat padding-box; */
-opacity: 1;
+  left: 40px;
+  width: 517px;
+  height: 145px;
+  /* UI Properties */
+  /* background: transparent url('../Assets/EZ\ Works\ Blue@2x.png') 0% 0% no-repeat padding-box; */
+  opacity: 1;
 }
 
 .main-heading {
