--- a/src/components/ServiceCards.css
+++ b/src/components/ServiceCards.css
@@ -17,7 +17,6 @@
   margin: 10px;
 }
 
-
 .card-image {
   top: 286px;
   left: 897px;
@@ -29,33 +28,37 @@
   padding: 15px;
 }
 
+.in-card {
+  display: flex;
+  align-items: center;
+}
 
 .card h2 {
   top: 286px;
-left: 975px;
-width: 173px;
-height: 58px;
-/* UI Properties */
-text-align: left;
-font: normal normal normal 24px/29px Exo 2.0;
-letter-spacing: 0px;
-color: #3CC3F2;
-opacity: 1;
-padding-left: 15px;
+  left: 975px;
+  width: 173px;
+  height: 58px;
+  /* UI Properties */
+  text-align: left;
+  font: normal normal normal 24px/29px Exo 2;
+  letter-spacing: 0px;
+  color: #3cc3f2;
+  opacity: 1;
+  padding-left: 15px;
 }
 
 .card p {
   top: 364px;
-left: 897px;
-width: 251px;
-height: 116px;
-/* UI Properties */
-text-align: left;
-font: normal normal normal 24px/29px Exo 2.0;
-letter-spacing: 0px;
-color: #FFFFFF;
-opacity: 1;
-padding-left: 15px;
+  left: 897px;
+  width: 251px;
+  height: 116px;
+  /* UI Properties */
+  text-align: left;
+  font: normal normal normal 24px/29px Exo 2;
+  letter-spacing: 0px;
+  color: #ffffff;
+  opacity: 1;
+  padding-left: 15px;
 }
 
 @media (max-width: 720px) {
