--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,19 @@ html,
   padding: 0;
   font: normal normal normal 32px/38px Exo 2;
   background-color: #f9f9f9;
+  display: flex;
+  align-items: center;
 }
 
 .main {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+@media (min-width) {
+  .app {
+    display: flex;
+    flex-direction: column;
+  }
 }
